update before you begin

--- a/_content/public.html
+++ b/_content/public.html
@@ -23,7 +23,7 @@ sectionExpect:
     - title: "Before You Begin"
       bullets:
         - name: "Guided tutorial for getting started with dbt on Snowflake"
-        - name: "Primers for SQL Foundations and Bash/Git"
+        - name: "Support from instructors through dbt community Slack for setting up your training environment"
     - title: "During"
       bullets: 
         - name: "A two-day course, taught by instructors from Fishtown Analytics 👋"
