--- a/_content/public.html
+++ b/_content/public.html
@@ -39,8 +39,8 @@ sectionExpect:
   buttonLink: "#upcoming-events"
 sectionEnroll:
   headline: Upcoming Events
-  scholarshipButton: Diversity Scholarship
-  scholarshipDesc: We are committed to making dbt, and knowledge of analytics engineering, accessible to as many people as possible. To that end, we have a diversity scholarship available to decrease or waive the cost of participation.
+  scholarshipButton: Community Scholarship
+  scholarshipDesc: We are committed to making dbt, and knowledge of analytics engineering, accessible to as many people as possible. To that end, we have a community scholarship available to decrease or waive the cost of participation.
 ---
 
 <div class="bg-navy-darker top-promo">
@@ -127,7 +127,7 @@ sectionEnroll:
                         <!-- Ticket Tailor Widget. Paste this in to your website where you want the widget to appear. Do no change the code or the widget may not work properly. -->
                         <div style="margin: 40px" class="tt-widget"><div class="tt-widget-fallback"><p><a href="https://www.tickettailor.com/all-tickets/fishtownanalytics/ref/website_widget/" target="_blank">Click here to buy tickets</a><br /><small><a href="https://www.tickettailor.com?rf=wdg" class="tt-widget-powered">Sell tickets online with Ticket Tailor</a></small></p></div><script src="https://www.tickettailor.com/js/widgets/min/widget.js" data-url="https://www.tickettailor.com/all-tickets/fishtownanalytics/ref/website_widget/" data-type="inline" data-inline-minimal="false" data-inline-show-logo="true"  data-inline-bg-fill="true"></script></div>
                         <!-- End of Ticket Tailor Widget -->
-                        <a href="" class="btn btn-default radius" target="_blank"><i data-icon="graduation-cap" title="" alt=""></i>{{page.sectionEnroll.scholarshipButton}}</a>
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSf71YlOWjjX6Uuf5v0Y5S9NNj58A7-Ug8a2Lpt1rVnnHqm5rg/viewform" class="btn btn-default radius" target="_blank"><i data-icon="graduation-cap" title="" alt=""></i>{{page.sectionEnroll.scholarshipButton}}</a>
                         <p><strong>{{page.sectionEnroll.scholarshipDesc}}</strong></p>
                     </div>
                 </div>
