tweak chat slide

--- a/_lessons/distributed-norms.html
+++ b/_lessons/distributed-norms.html
@@ -61,13 +61,14 @@ Content Based & Practice Based
 - **Mic off**
 - **Questions in the Slack chat, not Zoom chat (moderated by another instructor)**
 - **Emoji Reactions** 
+
 ---
 
 class: subtitle
 
 ## What is you favorite potato-based food?
 
-Type your answer to everyone in the chat.
+Type your answer to everyone in the thread in Slack chat. (not Zoom chat)
 
 ---
 
@@ -126,7 +127,6 @@ class: subtitle
 * Note: We might check in just to make sure you are doing alright if we see your video is off for a while.
 
 ---
-
 
 class: title, center, middle
 
