add tracks to the end

--- a/_lessons/techniques-trade-mod.html
+++ b/_lessons/techniques-trade-mod.html
@@ -417,4 +417,22 @@ class: subtitle, center, middle
 - Find a channel and jump in!
 
 ---
+class: subtitle
 
+
+## Internal Learn Pt. 2
+
+.left-column[
+### Track 1
+- Jerco
+- for the software engineer
+- watching analytics code
+- thinking about software code
+]
+
+.right-column[
+### Track 2
+- Alexis + Coap
+- for the analytics engineer
+- writing analytics code
+]
