remove office hours language

--- a/_lessons/outro.html
+++ b/_lessons/outro.html
@@ -10,7 +10,7 @@ class: title, center, middle
 
 * Zoom recordings (video + chat): within a week
 * dbt Cloud + Snowflake access: two more weeks
-* Office Hours: {{ site.data.links.office_hours }}
+<!-- * Office Hours: {{ site.data.links.office_hours }} -->
 * Slack channel: forever!
 
 ---
