--- a/_content/public.html
+++ b/_content/public.html
@@ -49,7 +49,7 @@ sectionEnroll:
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
-						<h1 class="h0">{{page.h1}}</h1>
+						<h1 class="h0" style="font-size: 3.4em;">{{page.h1}}</h1>
                         <div class="row pt-0">
                             <p class="text-large col-md-8">{{page.h2}}</p>
                             <div class="col-md-4">
