--- a/_lessons/outro.html
+++ b/_lessons/outro.html
@@ -39,6 +39,10 @@ class: title, center, middle
 # Feedback 🙏
 [Five-minute survey]({{site.data.links.feedback}})
 
+.caption-left-small[
+  [Microsoft Form]({{site.data.links.feedback-microsoft-form}})
+]
+
 
 ---
 class: title, center, middle
