--- a/_lessons/outro.html
+++ b/_lessons/outro.html
@@ -10,7 +10,6 @@ class: title, center, middle
 
 * Zoom recordings (video + chat): within a week
 * dbt Cloud + Snowflake access: two more weeks
-<!-- * Office Hours: {{ site.data.links.office_hours }} -->
 * Slack channel: forever!
 
 ---
@@ -39,7 +38,7 @@ class: title, center, middle
 # Feedback 🙏
 [Five-minute survey]({{site.data.links.feedback}})
 
-.caption-left-small[
+.caption-right-small[
   [Microsoft Form]({{site.data.links.feedback-microsoft-form}})
 ]
 
