Fix some metadata that referenced Fishtown Analytics. Also fixed missing quotation mark images that were bothering me.

--- a/_content/index.html
+++ b/_content/index.html
@@ -78,8 +78,8 @@ stats:
 <section class="bg-white section student-testimonial text-navy-darker">
     <div class="mask mask-nw text-navy-darker"></div>
     <div class="container testimonial ">
-        <div class="quote top"><img src="//www.getdbt.com/ui/img/ecosystem/detail-quote-top.png" /></div>
-        <div class="quote bottom"><img src="//www.getdbt.com/ui/img/ecosystem/detail-quote-bottom.png" /></div>
+        <div class="quote top"><img src="/ui/img/detail-quote-top.png" /></div>
+        <div class="quote bottom"><img src="/ui/img/detail-quote-bottom.png" /></div>
         <div id="carousel1" class="carousel slide row bg-white" data-interval="9000" data-carousel>
         <ol class="carousel-indicators">
           <li data-target="#carousel1" data-slide-to="0" class="active"></li>
