--- a/_lessons/techniques-trade-mod.html
+++ b/_lessons/techniques-trade-mod.html
@@ -111,9 +111,9 @@ There are no loops or conditional statements
 
 # ✅ Jinja + Macros
 
-Jinja brings aspects of python directly into the SQL analytics workflow.
+Jinja brings aspects of Python directly into the SQL analytics workflow.
 
-You can leverage loops, if/then,
+You can leverage loops, conditionals, and variables.
 
 ---
 
@@ -134,9 +134,9 @@ dbt has two types of tests built in
 
 ---
 
-## ❓ I found some dbt code I want to use - should I just copy paste it in?
+## ❓ I found some dbt code I want to use - should I just copy and paste it in?
 
-My colleague Claire wrote some really cool code for generating model files.
+My colleague wrote some really cool code for generating model files.
 
 A dbt community member wrote an excellent testing suite of macros that I want to use.
 
@@ -154,7 +154,7 @@ This allows you to get the latest version of the package _instead_ of copy pasti
 
 I have a really large Google sheet that documents my data for my organization to self-serve.
 
-This is often out of date so I end up answering questions in slack/email all the time.
+This is often out of date so I end up answering questions in Slack/email all the time.
 
 The most common question I get is where does this data come from?
 
@@ -435,13 +435,13 @@ class: subtitle
 ### Track 1
 - Jerco
 - for the software engineer
-- watching analytics code
-- thinking about software code
+- seeing analytics code
+- thinking about dbt infrastructure
 ]
 
 .right-column[
 ### Track 2
-- Alexis + Coap
-- for the analytics engineer
+- Alexis
+- for the analytics engineer experience
 - writing analytics code
 ]
