Remove Slack and Zoom references from distributed-norms.html

--- a/_lessons/distributed-norms.html
+++ b/_lessons/distributed-norms.html
@@ -42,7 +42,7 @@ During these two days, we want to introduce some norms so we can get the most ou
 
 # Agenda and Resources
 
-- **Agenda:** We have organized the timing for our training in a separate [agenda]({{ site.data.links.agenda }})
+- **Agenda:** We have organized the timing for our training in a separate agenda
 - **Lessons:** All lesson decks can be found at [learn.getdbt.com/lessons](https://learn.getdbt.com/lessons)
 ---
 
@@ -59,7 +59,7 @@ Content Based & Practice Based
 
 - **Video on**
 - **Mic off**
-- **Questions in the Slack chat, not Zoom chat (moderated by another instructor)**
+- **Questions in chat (moderated by another instructor)**
 - **Emoji Reactions** 
 
 ---
@@ -68,7 +68,7 @@ class: subtitle
 
 ## What is you favorite potato-based food?
 
-Type your answer to everyone in the thread in Slack chat. (not Zoom chat)
+Type your answer to everyone in the thread in chat.
 
 ---
 
@@ -76,7 +76,7 @@ Type your answer to everyone in the thread in Slack chat. (not Zoom chat)
 
 - Video on
 - Mic off
-- Questions in the Slack chat, not Zoom chat (moderated by another instructor)
+- Questions in chat (moderated by another instructor)
 - Emoji Reactions
 - **Checkpoints**
 - **Pausing for Questions**
@@ -113,7 +113,7 @@ class: subtitle
 ???
 * The other method of learning will be Practice-based!
 * These will be chances to work in small groups with the support of a teacher.
-* We will use Zoom's breakout rooms to manage these.
+* We will use breakout rooms to manage these.
 
 
 ---
@@ -122,7 +122,7 @@ class: subtitle
 
 * If you have to step out for a personal reason, feel free to turn off your video and step out.
 
-* When you return, please turn your video back on.  It is really helpful for building community and letting us know you are with us 😃
+* When you return, please turn your video back on. It is really helpful for building community and letting us know you are with us 😃
 
 * Note: We might check in just to make sure you are doing alright if we see your video is off for a while.
 
