Remove _data/links.yml and references to it

--- a/_lessons/outro.html
+++ b/_lessons/outro.html
@@ -36,10 +36,10 @@ We have a bonus [case study](case-study)!
 class: title, center, middle
 
 # Feedback 🙏
-[Five-minute survey]({{site.data.links.feedback}})
+[Five-minute survey](https://forms.gle/otqa2xdK7yMqK95c7)
 
 .caption-right-small[
-  [Microsoft Form]({{site.data.links.feedback-microsoft-form}})
+  [Microsoft Form](https://forms.office.com/r/22BvPvpfkG)
 ]
 
 
