--- a/_lessons/who-is-analytics-engineer.html
+++ b/_lessons/who-is-analytics-engineer.html
@@ -8,10 +8,10 @@ class: title, center, middle
 
 ---
 
-# Who are you?
+# Introdus
 
-- [Intros!]({{site.data.links.intros}})
-- Where are you calling from? (city + room)
+- Where are you calling from?
+- What does your day-to-day work look like?
 - What is one thing you'd like to get from this training?
 
 ---
