Move intros from Who is AE to Distributed norms

--- a/_lessons/distributed-norms.html
+++ b/_lessons/distributed-norms.html
@@ -7,8 +7,7 @@ working_session: false
 ---
 
 class: title, center, middle
-
-# Welcome to dbt Learn Distributed
+# Welcome to dbt Learn Group Trainng
 
 ---
 
@@ -34,15 +33,15 @@ class: title, center, middle
 
 ???
 During these two days, we want to introduce some norms so we can get the most out of today
-* All In - If we are all fully present, this will be an impactful two days for everyone.  You might consider turning off notifications during lessons.
+* All In - If we are all fully present, this will be an impactful two days for everyone. You might consider turning off notifications during lessons.
 * Curiosity - Our sessions are driven by thoughtful, deep questions and everyone contributing their expertise.
-* Community - While we are learning here, people are going to be at different places in their dbt skills.  Let's all support each other in getting better.  You might even make a long term connection in the data community!
+* Community - While we are learning here, people are going to be at different places in their dbt skills. Let's all support each other in getting better.  You might even make a long term connection in the data community!
 
 ---
 
 # Agenda and Resources
 
-- **Agenda:** We have organized the timing for our training in a separate agenda
+- **Agenda:** See chat for a link to the agenda for each day
 - **Lessons:** All lesson decks can be found at [learn.getdbt.com/lessons](https://learn.getdbt.com/lessons)
 ---
 
@@ -68,7 +67,7 @@ class: subtitle
 
 ## What is you favorite potato-based food?
 
-Type your answer to everyone in the thread in chat.
+Type your answer to everyone in a thread in chat.
 
 ---
 
@@ -126,6 +125,16 @@ class: subtitle
 
 * Note: We might check in just to make sure you are doing alright if we see your video is off for a while.
 
+---
+
+# Intros
+
+- Where are you calling from?
+- What does your day-to-day work look like?
+- What is one thing you'd like to get from this training?
+
+???
+Open the introductions slide deck for this section.
 ---
 
 class: title, center, middle
