Replace more Zoom and Slack references

--- a/_lessons/outro.html
+++ b/_lessons/outro.html
@@ -8,9 +8,9 @@ class: title, center, middle
 ---
 # After today
 
-* Zoom recordings (video + chat): within a week
+* video recordings: within a week
 * dbt Cloud + Snowflake access: two more weeks
-* Slack channel: forever!
+* chat: forever!
 
 ---
 # Want more practice?
