--- a/_lessons/techniques-trade-mod.html
+++ b/_lessons/techniques-trade-mod.html
@@ -23,7 +23,7 @@ We are having a _really_ challenging time sharing different versions of files wi
 
 Alexis sent me an email with `dim_customers.sql`
 
-Jeremy pinged me in slack with `dim_customers_v1.sql`
+Jeremy pinged me in Slack with `dim_customers_v1.sql`
 
 I have `dim_customers_final.sql` on my desktop
 
@@ -154,7 +154,7 @@ This allows you to get the latest version of the package _instead_ of copy pasti
 
 I have a really large Google sheet that documents my data for my organization to self-serve.
 
-This is often out of date so I end up answering questions in Slack/email all the time.
+This is often out of date so I end up answering questions in chat/email all the time.
 
 The most common question I get is where does this data come from?
 
