--- a/_lessons/intro-to-jinja.html
+++ b/_lessons/intro-to-jinja.html
@@ -388,8 +388,8 @@ class: subtitle
 2. **As a class**: use _some_ Jinja + SQL
 3. **In your breakout groups**:
 * Refactor!
-* Each breakout group will have a Teacher's Assistant
-* Let us know in Slack when you have finished refactoring
+* Each breakout group will have an Instructor
+* Let us know in chat when you have finished refactoring
 
 **As a class**: one person from each breakout group will present their solution.
 We'll discuss the pros and cons of each approach.
