--- a/_lessons/sources.html
+++ b/_lessons/sources.html
@@ -100,10 +100,21 @@ sources:
         identifier: orders
 
 ```
+???
+
+source definitions are nested under a source key. You have to provide a source name, which is usually the name of the schema. For the Snowflake users,
+you can also provide a database name and then after that you can list your tables. If one of your sources is badly named, there is also an opportunity for you to 
+provide ....
 
 ---
 
 # Selecting from sources
+???
+
+Once you have defined a source, you can now utilize the source jinja function to select from that source in a model. The source function here will compile to the full 
+object name in the database, so select star from source-jaffleshop will compile to raw.jaffleshop.customers, with the database name raw, which
+is **clicks back** how we defined it in our yml file.
+
 
 Use the {% raw %}`{{ source() }}`{% endraw %} function to select from a source in a model:
 
@@ -194,6 +205,11 @@ This allows you to debug more quickly!
 
 ]
 
+?? 
+
+So, can you add tests to sources? Yes you can and you absolutely should! **Add something about when to test staging models vs when to test source models**
+
+
 ---
 
 # Testing Sources
@@ -240,6 +256,18 @@ sources:
 
 Then run `dbt source snapshot-freshness`
 
+??
+
+Now that we've defined our sources and we know how to test them - lets jump back this slide. What happens when your source data is delayed?
+Has that ever happened to you before? And if it has happened to you, do you have a reliable way of capturing that?
+
+dbt has a command called source-snapshot freshness that will allow you to capture the latency of your source tables. All you need to do is add a loaded_at field 
+to your source definition, and under that add whats called a freshness block. The loaded at field should be a column from the source data 
+that is a reliable of when the source data was loaded into the warehouse. This usually something like an updated_at, in Stitch of Fivetran they are xyz. 
+
+Your freshness blocks will then determine -----. In this example, we have configured 
+checks to run essentially every 12 hours. 
+
 ---
 ## Snapshotting freshness
 
@@ -256,6 +284,8 @@ Found 5 models, 20 tests, 0 snapshots, 0 analyses, 130 macros, 0 operations, 0 s
 17:29:21 | Done.
 ```
 ]
+
+?? Running the command dbt source snapshot freshness will give you an output like this: 
 
 ### How does dbt check freshness?
 
@@ -288,6 +318,12 @@ from raw.stripe.payment
 
 
 .left-column-33[
+
+???
+
+Behind the scenes, dbt will calculate the difference between the max of the loaded at field, so the most recent row uploaded, and the time 
+at which the snapshot time is being run. The results of this query are used to determine whether the source is fresh or not. 
+
 ## In dbt Cloud:
 
 Adding this step to a job helps you understand if one of your data sources is out of date.
