First pass of making slides generic

--- a/_lessons/dbt-project-design.html
+++ b/_lessons/dbt-project-design.html
@@ -393,7 +393,7 @@ For your final artifacts, consider which sources will power this project:
 
 <img src="/ui/img{{page.id}}/dag-part-2.png" style="width: 70%;" class="img-center">
 
-(More on this later today)
+(More on this later)
 ---
 
 # Interface #1: The dbt DAG
