--- a/_lessons/distributed-norms.html
+++ b/_lessons/distributed-norms.html
@@ -32,8 +32,8 @@ class: title, center, middle
 ]
 
 ???
-During these two days, we want to introduce some norms so we can get the most out of today
-* All In - If we are all fully present, this will be an impactful two days for everyone. You might consider turning off notifications during lessons.
+We want to introduce some norms so we can get the most out of our time together
+* All In - If we are all fully present, this will be an impactful training for everyone. You might consider turning off notifications during lessons.
 * Curiosity - Our sessions are driven by thoughtful, deep questions and everyone contributing their expertise.
 * Community - While we are learning here, people are going to be at different places in their dbt skills. Let's all support each other in getting better.  You might even make a long term connection in the data community!
 
