--- a/_lessons/intro-to-jinja.html
+++ b/_lessons/intro-to-jinja.html
@@ -69,7 +69,7 @@ class: subtitle
 # Let's see jinja in action now
 
 * We will see some code, try to predict the output.
-* Raise your hand on Zoom to give your answer and explanation.
+* Raise your hand or shout out your answer and explanation.
 * This thinking is new for some people - let's help each other get acquainted with jinja!
 
 ???
