--- a/_lessons/deployment.html
+++ b/_lessons/deployment.html
@@ -155,7 +155,7 @@ $ dbt test --exclude source:*
 
 Recommended:
 - Separate "slim" CI job — fast runs, clear notifications
-- Weekly full refresh job — more on this tomorrow!
+- Weekly full refresh job — more on this later!
 
 Seen in the wild:
 - Separate jobs for different parts of your project
