Remove references to Slack, Zoom, and length of training (#187)
* Edit _data/curriculum/yml to remove sections for days

* Playing around with curriculum.yml format

* Remove title from curriculum.yml

* Get rid of name, put back title in curriculum.yml

* Remove Slack and Zoom references from distributed-norms.html

* Remove _data/links.yml and references to it

* Move intros from Who is AE to Distributed norms

* Replace more Zoom and Slack references

* First pass of making slides generic

* Last changes

--- a/_lessons/distributed-norms.html
+++ b/_lessons/distributed-norms.html
@@ -7,8 +7,7 @@ working_session: false
 ---
 
 class: title, center, middle
-
-# Welcome to dbt Learn Distributed
+# Welcome to dbt Learn Group Trainng
 
 ---
 
@@ -33,16 +32,16 @@ class: title, center, middle
 ]
 
 ???
-During these two days, we want to introduce some norms so we can get the most out of today
-* All In - If we are all fully present, this will be an impactful two days for everyone.  You might consider turning off notifications during lessons.
+We want to introduce some norms so we can get the most out of our time together
+* All In - If we are all fully present, this will be an impactful training for everyone. You might consider turning off notifications during lessons.
 * Curiosity - Our sessions are driven by thoughtful, deep questions and everyone contributing their expertise.
-* Community - While we are learning here, people are going to be at different places in their dbt skills.  Let's all support each other in getting better.  You might even make a long term connection in the data community!
+* Community - While we are learning here, people are going to be at different places in their dbt skills. Let's all support each other in getting better.  You might even make a long term connection in the data community!
 
 ---
 
 # Agenda and Resources
 
-- **Agenda:** We have organized the timing for our training in a separate [agenda]({{ site.data.links.agenda }})
+- **Agenda:** See chat for a link to the agenda for each day
 - **Lessons:** All lesson decks can be found at [learn.getdbt.com/lessons](https://learn.getdbt.com/lessons)
 ---
 
@@ -59,7 +58,7 @@ Content Based & Practice Based
 
 - **Video on**
 - **Mic off**
-- **Questions in the Slack chat, not Zoom chat (moderated by another instructor)**
+- **Questions in chat (moderated by another instructor)**
 - **Emoji Reactions** 
 
 ---
@@ -68,7 +67,7 @@ class: subtitle
 
 ## What is you favorite potato-based food?
 
-Type your answer to everyone in the thread in Slack chat. (not Zoom chat)
+Type your answer to everyone in a thread in chat.
 
 ---
 
@@ -76,7 +75,7 @@ Type your answer to everyone in the thread in Slack chat. (not Zoom chat)
 
 - Video on
 - Mic off
-- Questions in the Slack chat, not Zoom chat (moderated by another instructor)
+- Questions in chat (moderated by another instructor)
 - Emoji Reactions
 - **Checkpoints**
 - **Pausing for Questions**
@@ -113,7 +112,7 @@ class: subtitle
 ???
 * The other method of learning will be Practice-based!
 * These will be chances to work in small groups with the support of a teacher.
-* We will use Zoom's breakout rooms to manage these.
+* We will use breakout rooms to manage these.
 
 
 ---
@@ -122,10 +121,20 @@ class: subtitle
 
 * If you have to step out for a personal reason, feel free to turn off your video and step out.
 
-* When you return, please turn your video back on.  It is really helpful for building community and letting us know you are with us 😃
+* When you return, please turn your video back on. It is really helpful for building community and letting us know you are with us 😃
 
 * Note: We might check in just to make sure you are doing alright if we see your video is off for a while.
 
+---
+
+# Intros
+
+- Where are you calling from?
+- What does your day-to-day work look like?
+- What is one thing you'd like to get from this training?
+
+???
+Open the introductions slide deck for this section.
 ---
 
 class: title, center, middle
