Lesson slide changes for no prework

--- a/_lessons/intro-to-jinja.html
+++ b/_lessons/intro-to-jinja.html
@@ -408,6 +408,6 @@ We'll discuss the pros and cons of each approach.
 
 ---
 class: subtitle, middle, center
-# Let's jinja!
+# Let's Jinja!
 
 {% include options/last_slide.html %}
