Tweaks for last slides

--- a/_lessons/dbt-fundamentals.html
+++ b/_lessons/dbt-fundamentals.html
@@ -394,4 +394,4 @@ Teacher notes:
 * Use this as a checklist that you've covered everything off
 * Emphasize that we're going to launch off from here — use the lunch time to make sure that everyone is following so far.
 * For those who do understand, there's a working session
----
+{% include options/last_slide.html %}
