Fix typo in Distributed Norms title

--- a/_lessons/distributed-norms.html
+++ b/_lessons/distributed-norms.html
@@ -7,7 +7,7 @@ working_session: false
 ---
 
 class: title, center, middle
-# Welcome to dbt Learn Group Trainng
+# Welcome to dbt Learn Group Training
 
 ---
 
